# smpl_cpp

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.a5b0324  ObjectMesh.cpp  ObjectMesh.h  README.md  male_model.json  model.json  op.h  pf.cpp  pf.h  renderer.cpp  renderer.hpp  smpl.h  smpl_fit.cpp  stickman.h  stickman_fit.cpp  tensor.h  test.cpp  test.m  test2.cpp  test_np.py  trackbar.h
data/: 00001_body.json  00001_body.pkl  00001_dataset_info.txt  00001_fit_crop_info.txt  00001_joints.npy
obj2/: mesh.mtl
smplify_public/: index.html
smplify_public/code/: hello_smpl.py  render_smpl.py
smplify_public/code/models/: basicModel_f_lbs_10_207_0_v1.0.0.pkl.json  betas2rads.npy
smplify_public/code/smpl_webuser/: lbs.py  serialization.py  verts.py
smplify_public/code/smpl_webuser/hello_world/: hello_smpl.py
smplify_public/results/lsp/: lsp_gender.csv
